<resources>
    <string name="app_name">TheBeerGuy</string>
    <string name="title_activity_intro_screen">IntroScreen</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="aboutus1"><strong>Lorem ipsum dolor sit </strong>amet, consectetur adipiscing elit. Diam amet, interdum scelerisque varius vitae fames. Ipsum, enim, et, nunc mauris consectetur in eu, fringilla. Et facilisi massa eget praesent pulvinar arcu, suspendisse habitant. Tempus sit id consequat, maecenas rhoncus quam.</string>
    <string name="link">support@thebeerguy.ca</string>
    <string name="j326_daksh">123 test St, Toronto, ON, M4A1K5, Unit 301</string>
    <string name="empty_email_message">Please enter your email address</string>
    <string name="login_message">Log in to your account</string>
    <string name="google_signin_btn">SIGN IN WITH GOOGLE</string>
    <string name="fb_signin_btn">SIGN IN WITH FACEBOOK</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="Brewer"><b>Brewer:</b></string>
    <string name="store"><b>Stores:</b></string>
    <string name="alcohol"><b>Alcohol:</b></string>
    <string name="availability"><b>Availability:</b></string>
    <string name="budweiser">Budweiser</string>
    <string name="productDetails"><![CDATA[Light golden colour; light malt & hops; light body, touch of citrus to finish]]></string>
    <string name="todo">TODO</string>
    <string name="title_activity_nav_party_drink_calculator">NavPartyDrinkCalculator</string>
    <string name="SocialResponsibility">What is Social Responsibility?</string>
    <string name="SocialResponsibility1">Remember that you and others have the right to abstain from alcohol.
    If you do choose to drink, please do so responsibly.</string>
    <string name="DrinkAndDrive">Do Not Drink and Drive</string>
    <string name="DrinkAndDrive2">Do not allow an intoxicated person to drive. If the event you are attending does not provide sober a driver, appoint someone from your group of friends as the sober driver.
        Some bars will provide free soft drinks to designated driver.
        Remember to take turns being the designated driver.</string>
    <string name="KnowYourLimit">Know Your Limit and Stay Within It</string>
    <string name="KnowYourLimit2">Alcohol affects each person differently.
        Factors include gender, body weight, mood, amount of food eaten, and alcohol tolerance.
        The rate at which you drink is also a big factor. Generally, our bodies can metabolize one drink per hour.
        Avoid gulping and guzzling! Party games which encourage excessive consumption are never a good idea.</string>
    <string name="DoNotCombine">Do Not Combine Alcohol with Other Drugs or Medications</string>
    <string name="DoNotCombine2">Alcohol is a depressant. When combined with other depressant medications or drugs, a cumulative effect can occur.
        Dangerous side effects can include cessation of breathing.
        Even over-the-counter medications such as cold remedies can be dangerous when taken with alcohol.</string>
    <string name="text_with_bullet">\u2022 every 12 bottles of beer over 36 bottles of beer \n
        \u2022 every 1 bottle of liquor over 3 bottles of liquor \n
        \u2022 every 1 bottle of wine over 3 bottles of wine \n
        \u2022 a required stop at BOTH the LCBO and The Beer Store
    </string>
    <string name="Bullet_text_help">\u2022 Residential Rates and coverage - please see our Delivery Rates page. \n
        \u2022 Gift Deliveries are $24.95 anywhere in Ontario.
    </string>
    <string name="skip">Skip</string>
    <string name="splash1_H">TELL US YOUR LOCATION</string>
    <string name="splash1_dis">Once you tell us where you are, we\'ll show you only products that are available to you today. Otherwise, you see stuff you can\'t have, and that\'s just not cool.</string>
    <string name="splash_h2">EXPLORE PRODUCT STORE</string>
    <string name="splash2_dis">Browse from thousands of new, local, well-known and not-so-well- known products. Select your favorites, or one\'s you\'d like to try, and press that magical order button.</string>
    <string name="splash3_h">EXPLORE PRODUCT STORE</string>
    <string name="splash3_dis">Browse from thousands of new, local, well-known and not-so-well- known products. Select your favorites, or one\'s you\'d like to try, and press that magical order button.</string>
    <string name="Landing_btn1">START SHOPPING</string>
    <string name="landing_btn2">ALREADY HAVE AN ACCOUNT, SIGN IN!</string>
    <string name="landing_dis1">Same day delivery of Beer,Liquor and Wine</string>
    <string name="landing_dis2">Beer,Liquor,Wine to your door since 2001</string>
    <string name="signup_text1">Create your account</string>
    <string name="signup_text2">Name</string>
    <string name="signup_phone">Phone Number</string>
    <string name="signup_email">Email</string>
    <string name="signup_address">Address</string>
    <string name="signup_password">Password</string>
    <string name="signup_text3">I agree to the</string>
    <string name="signup_text4">Terms Conditions</string>
    <string name="signup_sign_up">SIGN UP</string>
    <string name="signup_text5">Already have a Account?</string>
    <string name="signup_log_in">Log In</string>
    <string name="signup_apt">Apt</string>
    <string name="signup_buzzer">Buzzer</string>
    <string name="signup_exta_info">Exta Info</string>
    <string name="signup_text6">Email (will be your username)</string>
    <string name="signup_name">Name</string>
    <string name="signup_text7">Are you sending a gift delivery?</string>
    <string name="signup_yes">Yes</string>
    <string name="signup_no">No</string>
    <string name="signup_business">Is this a business?</string>
    <string name="signup_motel">Is this a Hotel or Motel?</string>
    <string name="home_sale">ON SALE</string>
    <string name="home_hot">WHAT’S HOT</string>
    <string name="home_beer">BEER</string>
    <string name="home_liquor">LIQUOR</string>
    <string name="home_wine">Wine</string>
    <string name="home_deliver">Deliver to :</string>
    <string name="account_user">User</string>
    <string name="account_edit">Edit</string>
    <string name="account_email_example">user@example.com</string>
    <string name="account_manage_address">Manage Address</string>
    <string name="account_payment">Payment Method</string>
    <string name="account_privacy">Privacy Policy</string>
    <string name="account_my_account">MY Account</string>
    <string name="notLogin_text1">You are not currently logged in</string>
    <string name="notLogin_login">Login</string>
    <string name="notLogin_text2">and all of your recents</string>
    <string name="notLogin_text3">orders will be here for you to</string>
    <string name="notLogin_text4">review, and easily reorder.</string>
    <string name="recent_btn">Clear Recently Viewed</string>
    <string name="orders_order">Orders</string>
    <string name="addAddress_name">Name</string>
    <string name="addAddress_first_name">Enter first name</string>
    <string name="addAddress_phoneNumber">Phone Number</string>
    <string name="addAddress_deliveryAddress">Delivery Address</string>
    <string name="addAddress_enter_delivery_address">Enter delivery address</string>
    <string name="addAddress_apt">Apt</string>
    <string name="addAddress_enter_apt">Enter your Apt</string>
    <string name="addAddress_buzzer">Buzzer</string>
    <string name="addAddress_enter_buzzer">Enter your buzzer code</string>
    <string name="addAddress_cell">Cell</string>
    <string name="addAddress_enter_cell">Enter your cell</string>
    <string name="addAddress_home">Home</string>
    <string name="addAddress_work">Work</string>
    <string name="addAddress_other">Other</string>
    <string name="addAddress_intersection">Intersection</string>
    <string name="addAddress_enter_intersection">Enter your intersection</string>
    <string name="addAddress_saveBtn">Save</string>
    <string name="addAddress_enter_number">Enter phone number</string>
    <string name="checkout_checkout">CheckOut</string>
    <string name="checkout_delivery_details">Delivery Details</string>
    <string name="checkout_payment_details">Payment Details</string>
    <string name="checkout_delivering">Delivering To</string>
    <string name="checkout_name">Name</string>
    <string name="checkout_text1">When would you like this delivery?</string>
    <string name="checkout_text2">Extra lnstructions regarding this order?</string>
    <string name="checkout_address">Address</string>
    <string name="checkout_continue">Continue</string>
    <string name="checkout_today">Today</string>
    <string name="checkout_morning">Morning (11-1)</string>
    <string name="checkout_text4">Eg. pickup a pack of cigarettes from the store, \n I have 2 cases of empties to return, etc.</string>
    <string name="editProfile">Edit Profile</string>
    <string name="editProfile_save">Save</string>
    <string name="editProfile_profile_image">Profile Image</string>
    <string name="editProfile_add_profile">Add Profile</string>
    <string name="editProfile_first_name">First Name</string>
    <string name="editProfile_address">Address</string>
    <string name="editProfile_phone">Phone</string>
    <string name="help_gift_deliveries">Gift Deliveries?</string>
    <string name="help_help_and_faq">Help and FAQ</string>
    <string name="help_delivery_area_and_fees">Delivery Area and Fees</string>
    <string name="help_text1">Yes, Gift Deliveries are available! You can pay online with Visa, Mastercard or AMEX, and schedule the delivery date/time through the website. Just follow the on-screen prompts.</string>
    <string name="help_text2">Gift Deliveries are $24.95 anywhere in Ontario.</string>
    <string name="help_text3">Gift bags or Gift cards are $5.00 each, and you can request either when checking out. You can also include your own customized message for the gift card.</string>
    <string name="help_payment_methods">Payment Methods</string>
    <string name="help_text5">Delivery Area and Fees</string>
    <string name="help_text6">We accept payment at the door by cash in all cities. You can also pay by Visa, Mastercard or AMEX in most major cities; note: a 5% surcharge is applied to credit card orders. Most major cities require credit card orders be delivered</string>
    <string name="complete_order_thankyou">Thank you for your order!</string>
    <string name="complete_order_text1">We’ve received your order and it will be dispatched during your delivery window. You can access your order details at any time on your orders page.</string>
    <string name="complete_order_continue_shopping">CONTINUE SHOPPING</string>
    <string name="resetPass_new_password">New password</string>
    <string name="resetPass_confirm_password">Confirm password</string>
    <string name="resetPass_create">CREATE</string>
    <string name="resetPass_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="resetPass_create_new_password">Create new password</string>
</resources>